Added new activities and image

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,11 @@ dependencies {
     implementation libs.ssp.android
     androidTestImplementation libs.ext.junit
     implementation libs.retrofit
+    implementation libs.volley
+    implementation libs.glide
     implementation libs.converter.gson
     implementation libs.logging.interceptor
     implementation libs.okhttp
     androidTestImplementation libs.espresso.core
+
 }
