--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,24 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".RecordsHistoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BatchListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PlanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ContactUsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WebViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CCAvenueActivity"
+            android:exported="false" />
+        <activity
             android:name=".FarmListDetailActivity"
             android:exported="false" />
         <activity
