--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,7 @@
 [versions]
 agp = "8.3.2"
 converterGson = "2.9.0"
-<<<<<<< HEAD
-=======
-glide = "4.15.1"
->>>>>>> ef3c6549b89830f91825af27b024f24cc9ef2d1f
+glide = "4.15.1"  # Updated version
 hiltAndroid = "2.40.5"
 hiltAndroidCompiler = "2.38.1"
 hiltCompiler = "2.29-alpha"
@@ -18,26 +15,14 @@ loggingInterceptor = "4.12.0"
 material = "1.12.0"
 activity = "1.9.1"
 constraintlayout = "2.1.4"
-<<<<<<< Updated upstream
-meowBottomNavigation = "1.0.0"
-sdpAndroid = "1.1.0"
-sspAndroid = "1.1.0"
-<<<<<<< HEAD
-
-[libraries]
-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
-=======
-=======
-meowBottomNavigation = "1.3.1"
-sdpAndroid = "1.1.1"
-sspAndroid = "1.1.1"
->>>>>>> Stashed changes
+meowBottomNavigation = "1.3.1"  # Updated version
+sdpAndroid = "1.1.1"  # Updated version
+sspAndroid = "1.1.1"  # Updated version
 volley = "1.2.1"
 
 [libraries]
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
->>>>>>> ef3c6549b89830f91825af27b024f24cc9ef2d1f
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidCompiler" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltAndroid" }
@@ -59,11 +44,7 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "converte
 retrofit2 = { module = "com.squareup.retrofit2:retrofit2", version.ref = "converterGson" }
 sdp-android = { module = "com.intuit.sdp:sdp-android", version.ref = "sdpAndroid" }
 ssp-android = { module = "com.intuit.ssp:ssp-android", version.ref = "sspAndroid" }
-<<<<<<< HEAD
-=======
 volley = { module = "com.android.volley:volley", version.ref = "volley" }
->>>>>>> ef3c6549b89830f91825af27b024f24cc9ef2d1f
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
-
