--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-<<<<<<< HEAD
             android:name=".MassageActivity"
-=======
-            android:name=".RecordsHistoryActivity"
             android:exported="false" />
+
+        <activity android:name=".RecordsHistoryActivity"
+            android:exported="false"/>
         <activity
             android:name=".BatchListActivity"
             android:exported="false" />
@@ -38,7 +38,6 @@
             android:exported="false" />
         <activity
             android:name=".FarmListDetailActivity"
->>>>>>> ef3c6549b89830f91825af27b024f24cc9ef2d1f
             android:exported="false" />
         <activity
             android:name=".DailyRecordActivity"
