--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,23 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ProductDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PrivacyPolicyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AboutUsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TermAndConditionActivity"
+            android:exported="false" />
+        <activity
             android:name=".MassageActivity"
             android:exported="false" />
-
-        <activity android:name=".RecordsHistoryActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".RecordsHistoryActivity"
+            android:exported="false" />
         <activity
             android:name=".BatchListActivity"
             android:exported="false" />
