--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ loggingInterceptor = "4.12.0"
 material = "1.12.0"
 activity = "1.9.2"
 constraintlayout = "2.1.4"
+poiOoxml = "5.2.3"
 sdpAndroid = "1.1.1"  # Updated version
 sspAndroid = "1.1.1"  # Updated version
 volley = "1.2.1"
@@ -26,6 +27,8 @@ material = { group = "com.google.android.material", name = "material", version.r
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "loggingInterceptor" }
+poi = { module = "org.apache.poi:poi", version.ref = "poiOoxml" }
+poi-ooxml = { module = "org.apache.poi:poi-ooxml", version.ref = "poiOoxml" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "converterGson" }
 sdp-android = { module = "com.intuit.sdp:sdp-android", version.ref = "sdpAndroid" }
 ssp-android = { module = "com.intuit.ssp:ssp-android", version.ref = "sspAndroid" }
